gotify/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: gotify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotify
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gotify
    spec:
      containers:
        - name: gotify
          image: ghcr.io/androidseb25/igotify-notification-assist:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - mountPath: /app/data
              name: gotify-data
      volumes:
        - name: gotify-data
          persistentVolumeClaim:
            claimName: gotify-data
