gotify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify-service
  namespace: gotify
  labels:
    app: gotify
spec:
  selector:
    app: gotify
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
